# opentui-core-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  marketplace.json
.cargo/: config.toml
.claude-plugin/: plugin.json
.claude/commands/: build-tui.md
examples/: hello.rs  leto.rs
skills/build-tui/: SKILL.md
src/: buffer.rs  color.rs  edit_buffer.rs  editor_view.rs  error.rs  event.rs  lib.rs  link.rs  renderer.rs  syntax_style.rs  text_buffer.rs  text_buffer_view.rs  unicode.rs
sys/: Cargo.toml  build.rs  build.zig  build.zig.zon  opentui.h
sys/src/: lib.rs
tests/: buffer.rs  color.rs  event.rs  integration.rs  link.rs  renderer.rs  text.rs  unicode.rs
